--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/metro-config": "~54.0.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@supabase/supabase-js": "^2.58.0",
     "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.10",
     "expo-constants": "~18.0.9",
