--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.16.0",
+    "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.21.0",
     "tailwindcss": "^3.4.17",
     "zustand": "^5.0.8"
