--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/metro-config": "~54.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
     "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.10",
