--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.10",
     "expo-constants": "~18.0.9",
+    "expo-image-picker": "^17.0.8",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.8",
     "expo-status-bar": "~3.0.8",
