--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-config": "~54.0.2",
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@tanstack/react-query": "^5.90.2",
@@ -19,6 +20,7 @@
     "expo-constants": "~18.0.9",
     "expo-image-picker": "^17.0.8",
     "expo-linking": "~8.0.8",
+    "expo-location": "~19.0.7",
     "expo-router": "~6.0.8",
     "expo-status-bar": "~3.0.8",
     "nativewind": "^4.2.1",
@@ -27,6 +29,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "react-native": "0.81.4",
+    "react-native-maps": "1.20.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.16.0",
