--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "react-native": "0.81.4",
+    "react-native-gesture-handler": "^2.30.0",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
