--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-location": "~19.0.7",
     "expo-router": "~6.0.8",
     "expo-status-bar": "~3.0.8",
+    "install": "^0.13.0",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.0",
@@ -37,6 +38,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.21.0",
+    "react-native-webview": "^13.16.0",
     "tailwindcss": "^3.4.17",
     "zustand": "^5.0.8"
   },
